# backend_Antifragile

./: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  tree
alembic/: env.py
alembic/versions/: db9f4ecb133e_create_users_and_journal_contents_tables.py
app/: main.py
app/api/: dependencies.py  journal.py  users.py
app/core/: config.py  db.py
app/core/exceptions/: exceptions.py
app/core/repositories/: base.py
app/models/: __init__.py  journalcontent.py  user.py
app/repository/: __init__.py  howto.md  users.py
app/schema/: journal.py  user.py
app/services/: auth_service.py  journal_service.py  users.py
app/utils/: security.py
