[project]
name = "python-train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
    "psycopg2-binary>=2.9.12",
    "pwdlib[argon2]>=0.3.0",
    "sqlmodel>=0.0.38",
]
